<resources>
    <string name="app_name">Spotify App 2340</string>
    <string name="title_timeMachine">Time Machine</string>
    <string name="title_newWrapped">New Wrapped</string>
    <string name="title_settings">Settings</string>
    <string name="top_songs">Your Top Songs &#9660;</string>
    <string name="top_artists">Your Top Artists &#9660;</string>
    <string name="top_genres">Your Top Genres &#9660;</string>
    <string name="describe_image">Spotify Logo</string>
    <string name="artist_ranking">1</string>
    <string name="artist_name">Taylor Swift</string>
    <string name="song_ranking">1</string>
    <string name="song_name">Love Story</string>
    <string name="genre_ranking">1</string>
    <string name="genre_name">Alternative Rock</string>
    <string name="new_wrapped">New Wrapped</string>
    <string name="time_machine">Time Machine</string>
    <string name="settings">Settings</string>
    <string name="date">Date</string>
    <string name="loading">Loading....</string>
    <string name="timespan">Time Span</string>

    <string-array name="time_options">
        <item>Short Term (~ 4 weeks)</item>
        <item>Medium Term (~ 6 months)</item>
        <item>Long Term (~ 1 year)</item>
    </string-array>


</resources>
