<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    tools:context=".MainActivity">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/sectionTopSongs"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="#92C7CF"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/top_songs"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="20sp"
                    tools:ignore="RtlCompat"/>

                <!--  RecyclerView in top songs section-->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewTopSongs"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/sectionTopArtists"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="#92C7CF"
                    android:fontFamily="@font/montserrat_semibold"
                    android:gravity="center_vertical"
                    android:text="@string/top_artists"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="20sp"
                    tools:ignore="RtlCompat" />

                <!--  RecyclerView in top artists section-->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewTopArtists"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:visibility="gone"/>

                <!--  RecyclerView in top genres section-->

                <TextView
                    android:id="@+id/sectionTopGenres"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="#92C7CF"
                    android:fontFamily="@font/montserrat_semibold"
                    android:gravity="center_vertical"
                    android:text="@string/top_genres"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="20sp"
                    tools:ignore="RtlCompat"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewTopGenres"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:visibility="gone"/>

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>